(executable
 (name michelson_mate)
 (libraries
   tezos-client-006-PsCARTHA
   tezos-client-base-unix
   tezos-client-commands
   tezos-storage
   tezos-shell-context
   tezos-006-PsCARTHA-test-helpers
   lwt.unix)
 (flags (:standard
          -open Tezos_base__TzPervasives
          -open Tezos_client_base
          -open Tezos_client_commands
          -open Tezos_client_base_unix)))

(install
 (section bin)
 (files
  (michelson_mate.exe as mm)
  (michelson_mate.exe as michelson-mate)))
