(lang dune 2.5)
(name kxc-tscalib)

(source (github kxcteam/tsca-tools))
(license MIT)
(authors "Haochen Xie")
(maintainers "Haochen Xie <hx@kxc.io>")

(generate_opam_files true)
(package
 (name kxc-tscalib)
 (synopsis "Internal library for the Tezos TSCA project")
 (version 1.0)
 (depends
  (dune (>= 2.0))
  (lwt (>= 4.0))
  (tezos-client-base-unix :build)
  (tezos-client-commands :build)
  (tezos-006-PsCARTHA-test-helpers :build)
  (tezos-shell-context :build)
  (tezos-storage :build)
  (tezos-protocol-006-PsCARTHA :build)
  (tezos-client-006-PsCARTHA :build)))
